# 8ball-pool

./: README.md  main.py  pyproject.toml  settings.py  utils.py
objects/: ball.py  cue.py  player.py  table.py
